adding ng2-material, to get their main stylesheet

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <!--
   {{#unless environment.production}}
   <link href="vendor/roboto-fontface/css/roboto/roboto-fontface.css" rel="stylesheet">
   <link href="vendor/material-design-icons/iconfont/material-icons.css" rel="stylesheet">
@@ -22,6 +23,10 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   {{/if}}
+  -->
+
+  <link rel="stylesheet" type="text/css" href="vendor/ng2-material/ng2-material.css">
+  <link rel="stylesheet" type="text/css" href="vendor/ng2-material/font/font.css">
 
 </head>
 <body>
